# fingerprint-fhe

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: feature_extraction.rs  main.rs  matching.rs
server/: Cargo.toml
server/src/: database.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs  matching_fhe.rs  protocol.rs  trivium.rs  trivium_fhe.rs
