[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tfhe = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rand = "0.8"

[[bin]]
name = "client"
path = "src/main.rs"

# Network (şimdilik file-based, sonra TCP)