[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tfhe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "server"
path = "src/main.rs"